# upwork_job_monitoring

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
data/: blacklist.txt  stats.json
data/prompts/: job_summary.txt
data/selectors/: upwork.yaml
src/application/: blacklist.py  filter_config.py  job_processor.py  monitor.py  stats.py
src/config/: loader.py  settings.py
src/domain/entities/: job.py
src/domain/ports/: llm_port.py  notifier_port.py  repository_port.py  scraper_port.py
src/infrastructure/llm/: groq_provider.py
src/infrastructure/notifications/: callback_handler.py  formatter.py  telegram_notifier.py
src/infrastructure/persistence/: json_queue.py
src/infrastructure/scraping/: browser.py  card_extractor.py  job_mapper.py  page_fetcher.py  upwork_scraper.py
